# automated-cloud-incidents

./: .gitignore  CITATION.cff  Makefile  README.md  requirements.txt  setup.py
configs/: default.yaml
notebooks/: 01_data_exploration.ipynb  02_vit_baseline_training.ipynb  03_gat_vit_training.ipynb  04_sparse_gat_training.ipynb  05_evaluation_comparison.ipynb  06_ablations.ipynb
openstack/: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
openstack/examples/: attach_volume.py  create_network.py  launch_vm.py  list_resources.py  upload_object.py
openstack/heat/: README.md  autoscaling.yaml  web_stack.yaml
openstack/src/: cli.py  config.py
openstack/src/clients/: cinder.py  neutron.py  nova.py  session.py  swift.py
openstack/src/mock/: mock_cloud.py
openstack/terraform/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
openstack/tests/: conftest.py  test_cinder.py  test_cli.py  test_config.py  test_mock_cloud.py  test_neutron.py  test_nova.py  test_swift.py
paper/: paper.bib  paper.tex
results/: generate_results.py
results/baseline/: README.md
results/improved/: README.md
src/: __init__.py  evaluate.py  graph_builder.py  preprocess.py  train.py  visualize.py
src/models/: __init__.py  deit_small.py  gat_vit.py  sparse_gat_vit.py  vit_baseline.py
stack-vm/: .gitignore  README.md  requirements.txt
stack-vm/docs/: ARCHITECTURE.md  INSTRUCTION_SET.md
stack-vm/programs/: bubble_sort.asm  factorial.asm  fibonacci.asm  hello.asm
stack-vm/src/: main.py
stack-vm/tests/: test_cpu.py  (+3 more)
(+11 files in other folders)
