[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "openstack-toolkit"
version = "0.1.0"
description = "Python automation toolkit for OpenStack"
authors = [
  { name = "Omprakash Pugazhnedhi", email = "omprakash.pugazhnedhi@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
  "openstacksdk>=2.0",
  "click>=8.1",
  "pyyaml>=6.0",
  "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
osctl = "src.cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"
